--- a/src/skeletons/skeleton.css
+++ b/src/skeletons/skeleton.css
@@ -35,3 +35,14 @@
   grid-gap: 30px;
   align-items: center;
 }
+
+/* themes */
+.skeleton-wrapper.light {
+  background: #f2f2f2;
+}
+.skeleton-wrapper.dark {
+  background: #444;
+}
+.skeleton-wrapper.dark .skeleton {
+  background: #777;
+}
