--- a/src/skeletons/skeleton.css
+++ b/src/skeletons/skeleton.css
@@ -46,3 +46,31 @@
 .skeleton-wrapper.dark .skeleton {
   background: #777;
 }
+
+/* animation effects */
+.shimmer-wrapper {
+  position: absolute;
+  /* parent must be relative position & overflow hidden */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: loading 2.5s infinite;
+}
+.shimmer {
+  width: 50%;
+  height: 100%;
+  background: rgba(255,255,255,0.2);
+  transform: skewX(-20deg);
+  box-shadow: 0 0 30px 30px rgba(255,255,255,0.2);
+}
+.dark .shimmer {
+  background: rgba(255,255,255,0.05);
+  box-shadow: 0 0 30px 30px rgba(255,255,255,0.05);
+}
+
+@keyframes loading {
+  0% { transform: translateX(-150%) }
+  50% { transform: translateX(-60%) }
+  100% { transform: translateX(150%) }
+}
